# QCS9075-RTSS

qcom-args/opensource/args/: configure.ac
qcom-args/opensource/args/acdb/: Android.mk  Makefile.am  acdb.pc.in
qcom-args/opensource/args/acdb/api/: acdb.h  acdb_begin_pack.h  acdb_end_pack.h
qcom-args/opensource/args/acdb/ats/: Makefile.am  ats.pc.in
qcom-args/opensource/args/acdb/inc/: acdb_command.h  acdb_common.h  acdb_context_mgr.h  acdb_data_proc.h  acdb_delta_file_mgr.h  acdb_delta_parser.h  acdb_file_mgr.h  acdb_heap.h  acdb_init.h  acdb_init_utility.h  acdb_parser.h  acdb_types.h  acdb_utility.h
qcom-args/opensource/args/acdb/src/: acdb.c  acdb_command.c  acdb_context_mgr.c  acdb_data_proc.c  acdb_delta_file_mgr.c  acdb_delta_parser.c  acdb_file_mgr.c  acdb_heap.c  acdb_init.c  acdb_init_utility.c  acdb_parser.c  acdb_utility.c
qcom-args/opensource/args/ar_osal/: Android.mk  Makefile.am  ar_osal.pc.in
qcom-args/opensource/args/ar_osal/api/: ar_osal_error.h  ar_osal_file_io.h  ar_osal_heap.h  ar_osal_log.h  ar_osal_log_pkt_op.h  ar_osal_mem_op.h  ar_osal_mutex.h  ar_osal_servreg.h  ar_osal_shmem.h  ar_osal_signal.h  ar_osal_signal2.h  ar_osal_sleep.h  ar_osal_string.h  ar_osal_sys_id.h  ar_osal_thread.h  ar_osal_timer.h  ar_osal_types.h
qcom-args/opensource/args/ar_util/: Android.mk  Makefile.am  ar_util.pc.in
qcom-args/opensource/args/ar_util/api/: ar_util_data_log.h  ar_util_data_log_codes.h  ar_util_err_detection.h  ar_util_list.h
qcom-args/opensource/args/ar_util/inc/: ar_util_log_pkt_i.h
qcom-args/opensource/args/ar_util/src/: ar_util_data_log.c  ar_util_err_detection.c  ar_util_list.c
qcom-args/opensource/args/debian/: README.source  changelog  control  qcom-args-dev.install  rules
qcom-args/opensource/args/gpr/: Android.mk  Makefile.am  ar_gpr.pc.in
qcom-args/opensource/args/gpr/api/: ar_guids.h  ar_types.h  gpr_api.h  gpr_api_inline.h  gpr_comdef.h  gpr_ids_domains.h  gpr_msg_if.h  gpr_pack_begin.h  gpr_pack_end.h  gpr_packet.h  gpr_proc_info_api.h  ipc_dl_api.h
qcom-args/opensource/args/gsl/: Android.mk  Makefile.am  gsl.pc.in
qcom-args/opensource/args/gsl/api/: gsl_intf.h  gsl_subgraph_driver_props.h  gsl_subgraph_driver_props.xml  gsl_subgraph_platform_driver_props.xml
qcom-args/opensource/args/gsl/hw_rsc_api/: gsl_hw_rsc_intf.h
qcom-args/opensource/args/gsl/inc/: gsl_common.h  gsl_datapath.h  gsl_dynamic_module_mgr.h  gsl_global_persist_cal.h  gsl_graph.h  gsl_main.h  gsl_mdf_utils.h  gsl_mdf_utils.xml  gsl_msg_builder.h  gsl_rtc.h  gsl_rtc_main.h  gsl_shmem_mgr.h  gsl_spf_ss_state.h  gsl_subgraph.h  gsl_subgraph_driver_props_generic.h  gsl_subgraph_pool.h
qcom-args/opensource/args/gsl/rtc_api/: gsl_rtc_intf.h
qcom-args/opensource/args/gsl/src/: gsl_common.c  gsl_datapath.c  gsl_dynamic_module_mgr.c  gsl_global_persist_cal.c  gsl_graph.c  gsl_hw_rsc_mgr.c  gsl_main.c  gsl_mdf_utils.c  gsl_msg_builder.c  gsl_rtc.c  gsl_rtc_main.c  gsl_shmem_mgr.c  gsl_spf_ss_state.c  gsl_subgraph.c  gsl_subgraph_pool.c
qcom-args/opensource/args/spf/: Android.mk  Makefile.am  spf.pc.in
qcom-pal/opensource/arpal-lx/: Makefile.am  Pal.cpp  configure.ac
qcom-pal/opensource/arpal-lx/adsprpcd/: adsprpcd.c
qcom-pal/opensource/arpal-lx/api/vui-interface/: Makefile.am  configure.ac  vui-intf-header.pc.in
qcom-pal/opensource/arpal-lx/configs/iq8-8275-evk/: mixer_paths_iq8_8275_evk.xml  resourcemanager_iq8_8275_evk.xml
qcom-pal/opensource/arpal-lx/configs/qcm6490/: resourcemanager_qcm6490_idp.xml  usecaseKvManager.xml
qcom-pal/opensource/arpal-lx/configs/qcs6490/: mixer_paths_qcs6490_rb3gen2_ia.xml  mixer_paths_qcs6490_rb3gen2_vision.xml  resourcemanager_qcs6490_rb3gen2.xml  resourcemanager_qcs6490_rb3gen2_ia.xml  resourcemanager_qcs6490_rb3gen2_video.xml  usecaseKvManager_qcs6490.xml
qcom-pal/opensource/arpal-lx/configs/qcs8300/: mixer_paths_qcs8300_ridesx.xml  resourcemanager_qcs8300_ridesx.xml
qcom-pal/opensource/arpal-lx/configs/qcs9075/: mixer_paths_qcs9075_rb8.xml  resourcemanager_qcs9075_rb8.xml
qcom-pal/opensource/arpal-lx/configs/qcs9100/: resourcemanager_qcs9100_ridesx.xml
qcom-pal/opensource/arpal-lx/debian/: README.source  changelog  control  not-installed  qcom-pal-utils.install  qcom-pal.audio-node.udev  qcom-pal.audioadsprpcd.service  qcom-pal.install  qcom-pal.sysusers  rules
qcom-pal/opensource/arpal-lx/device/src/: Bluetooth.cpp  HapticsDevProtection.cpp  SpeakerProtection.cpp
qcom-pal/opensource/arpal-lx/inc/: PalApi.h  PalDefs.h  configure.ac
qcom-pal/opensource/arpal-lx/inc/debian/: README.source  changelog  control
qcom-pal/opensource/arpal-lx/plugins/codecs/: bt_aptx.c  bt_ble.c  bt_bundle.c
qcom-pal/opensource/arpal-lx/plugins/vui_interface/: Makefile.am  configure.ac
qcom-pal/opensource/arpal-lx/resource_manager/inc/: ResourceManager.h
qcom-pal/opensource/arpal-lx/resource_manager/src/: ResourceManager.cpp
qcom-pal/opensource/arpal-lx/session/inc/: PayloadBuilder.h  Session.h  SessionAlsaCompress.h  SessionAlsaPcm.h  SessionAlsaUtils.h  SoundTriggerEngineCapi.h
qcom-pal/opensource/arpal-lx/session/src/: ACDEngine.cpp  PayloadBuilder.cpp  SessionAlsaCompress.cpp  SessionAlsaPcm.cpp  SessionAlsaUtils.cpp  SessionAlsaVoice.cpp  SoundTriggerEngineCapi.cpp  SoundTriggerEngineGsl.cpp
qcom-pal/opensource/arpal-lx/stream/inc/: Stream.h  StreamACD.h  StreamHaptics.h  StreamPCM.h  StreamSoundTrigger.h
qcom-pal/opensource/arpal-lx/stream/src/: Stream.cpp  StreamACD.cpp  StreamCommon.cpp  StreamCompress.cpp  StreamHaptics.cpp  StreamInCall.cpp  StreamNonTunnel.cpp  StreamPCM.cpp  StreamSensorPCMData.cpp  StreamSoundTrigger.cpp
qcom-pal/opensource/arpal-lx/test/: PalTest_main.c  PalUsecaseTest.c
qcom-pal/opensource/arpal-lx/utils/src/: MetadataParser.cpp
qcom-pw-pal-plugin/opensource/pulseaudio-plugins/pipewire-plugin/: 60-disable-alsa.conf  Makefile.am  configure.ac  pw-pal-plugin.c  pw-pal-plugin.conf  pw-pal.pc.in
qcom-pw-pal-plugin/opensource/pulseaudio-plugins/pipewire-plugin/debian/: changelog  control  copyright  not-installed  qcom-pw-pal-plugin.install  rules
(+1849 files in other folders)
